opam-version: "1.2"
version: "0.2"
maintainer: "Ramil Farkhshatov <ramil.fh@ya.ru>"
authors: ["Ramil Farkhshatov <ramil.fh@ya.ru>"]
license: "LGPL-3 with OCaml linking exception"
build: ["dune" "build" "-j" jobs "-p" name]
depends: [
  "pluk-parser" {>= "0.2"}
  "lwt"
  "lwt_ppx"
]
synopsis: "Simple HTTP server"
